infrastructure/configs/zion/argocd-traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd      # or your namespace, e.g. open-webui or test-app ns
  # annotations:
  #   kubernetes.io/ingress.class: "traefik"
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
  #   traefik.ingress.kubernetes.io/router.tls: "true"
  #   traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.milanchis.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.milanchis.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  # ingressClassName: traefik
  # rules:
  # - host: argocd.milanchis.com   # YOUR domain/subdomain, pointed to your Traefik IP via Cloudflare A record
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: argocd-server
  #           port:
  #             number: 80
  tls:
    certResolver: cloudflare
  # - hosts:
  #   - argocd.milanchis.com
